--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "gl-matrix": "^3.3.0",
         "hex-rgb": "^4.3.0",
         "inquirer": "^8.0.0",
+        "is-online": "^9.0.1",
         "js-beautify": "^1.13.13",
         "lodash.clamp": "^4.0.3",
         "lodash.clonedeep": "^4.5.0",
