--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
         "inquirer": "^8.0.0",
         "is-online": "^9.0.1",
         "js-beautify": "^1.13.13",
+        "lodash.chunk": "^4.2.0",
         "lodash.clamp": "^4.0.3",
         "lodash.clonedeep": "^4.5.0",
         "lodash.constant": "^3.0.0",
