node image check / watch files feature was disabled?! / setting package manager config correctly in init

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     },
     "preferGlobal": true,
     "scripts": {
-        "preuninstall": "node ./src/preuninstall.js"
+        "preuninstall": "src/preuninstall.js"
     },
     "author": {
         "name": "Nathan Cook",
